<resources>
    <string name="app_name">Jewelines</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_quote">Quote</string>
    <string name="menu_getinsured"> Get Insured</string>
    <string name="menu_customquote"> Custom quote</string>


    <string name="menu_settings">Settings</string>

    <string name="menu_claim">Contact Us</string>
    <string name="menu_aboutus">About Us</string>

    <string-array name="array_name">
        <item>Selete A Type</item>
        <item>Ring</item>
        <item>Earrings</item>
        <item>Bracelet</item>
        <item>Necklace</item>
        <item>Watch</item>
        <item>Pendant</item>
        <item>Chain</item>
        <item>Other</item>
        <item>Loose Stone</item>
        <item>Brooch</item>
    </string-array>

    <string name="remarks_text">Personal information about you may be collected from persons other than you. Such information as well as other personal and privileged information collected by us or our agents may in certain circumstances be disclosed to third parties. You have the right to review your personal information in our fle and can request correction of any inaccuracies. A more detailed description of your rights and our practices regarding such information is available upon request. Contact your agent or broker for instruction on how to submit a request to us.</string>
</resources>
